2021-03-22  Floris Vanderhaeghe  <floris.vanderhaeghe@inbo.be>

	* man/digest.Rd: Reworded to also highlight file mode

2021-01-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/SpookyV2.cpp: Disallow unaligned reads which have been seen to
	trigger SAN issues as reported by Winston in #167

2020-12-23  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new CI badge

2020-10-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.27

2020-10-19  Dirk Eddelbuettel  <edd@debian.org>

	* src/blake3_dispatch.c: Comment-out include of intrinsics to also
	comment-out erroring on insufficient architectures such as Solaris

2020-10-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.6.26

	* docs/: Added package website
	* docs-src/: Added package website inputs

	* .travis.yml (dist): Change to focal

2020-10-15  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Update URLs
	* man/digest.Rd: Ditto
	* man/hmac.Rd: Ditto

2020-10-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* inst/tinytest/test_blake3.R: Skip file-based blake3 tests on Windows

	* vignettes/sha1.Rmd: Switch to minidown and 'framework: water'
	* DESCRIPTION (Suggests): Add minidown

2020-10-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2020-10-06  Winston Chang  <winston@stdout.org>

	* R/digest.R: Speedup via explicit alternative values for
	match.arg() and a direct call to serialize()
	* R/vdigest.R: Idem
	* R/init.R: Idem (for serialize())
	* inst/tinytest/test_digest.R: New test ensuring all variants hit

2020-09-21  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Updated to 'bionic', R 4.0, and BSPM

2020-08-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Depends): Roll Depends: on to R (>= 3.3.0) due to use