@@ -7,7 +7,8 @@ theme:
   name: material
   custom_dir: overrides
   features:
-    - tabs
+    - navigation.tabs
+    - navigation.instant
   font:
     text: Lato
   favicon: assets/Rlogo.png
@@ -32,8 +33,8 @@ nav:
     - man/makeRaw.md
     - man/sha1.md
     - man/vdigest.md
-  # - Articles:
-  #   - Sha1 Vignette: vignette.md
+  - Articles:
+    - Sha1 Vignette: vignette.md
   # - News:
   #   - news.md
   - Changelog:
